--- a/client/src/app/modules/tiers/components/complaint-tiers/complaint-tiers.component.html
+++ b/client/src/app/modules/tiers/components/complaint-tiers/complaint-tiers.component.html
@@ -4,18 +4,27 @@
       <mat-tab label="Espace reclamation">
       <autocomplete-affaire [(model)]="selectedAffaire" [form]="principalForm" propertyName="affaire"
         label="Affaire à reclamer" [isMandatory]="true" (onOptionSelected)="fillAffaire($event)"></autocomplete-affaire>
+        <table class="full-width">
+          <tr>
+            <generic-textarea [(model)]="customerOrderNumber"
+              label="Nº commande associée" [form]="principalForm"
+              propertyName="Commande associée" [numberOfLines]="1"
+              (keypress)="numberFilter($event)">
+            </generic-textarea>
+          </tr>
+        </table>
       <div class="mt-3">
-        <select-reclamation-problem [(model)]="selectedReclamationProblem" label="Selectionner le problème" [form]="principalForm" propertyName="reclamationProblem"
+        <select-reclamation-problem [(model)]="selectedReclamationProblem" label="Sélectionner le problème" [form]="principalForm" propertyName="reclamationProblem"
           [isMandatory]="true">
         </select-reclamation-problem>
       </div>
       <div class="mt-3">
-        <select-reclamation-origin [(model)]="selectedReclamationOrigin" label="Selectionner l'origin" [form]="principalForm" propertyName="reclamationOrigin"
+        <select-reclamation-origin [(model)]="selectedReclamationOrigin" label="Sélectionner l'origine" [form]="principalForm" propertyName="reclamationOrigin"
           [isMandatory]="true">
         </select-reclamation-origin>
       </div>
       <div class="mt-3">
-        <select-reclamation-cause [(model)]="selectedReclamationCause" label="Selectionner la cause" [form]="principalForm" propertyName="reclamationCause"
+        <select-reclamation-cause [(model)]="selectedReclamationCause" label="Sélectionner la cause" [form]="principalForm" propertyName="reclamationCause"
           [isMandatory]="true">
         </select-reclamation-cause>
       </div>
