--- a/client/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -37,6 +37,10 @@
     <mat-tab label="Prepa visite" *ngIf="tiers.id!=null && tiers.id!=undefined" >
       <visit-prepa-tiers-responsible-info [tiers]="tiers" ></visit-prepa-tiers-responsible-info>
       <visit-prepa-customer-orders-responsible [tiers]="tiers"></visit-prepa-customer-orders-responsible>
+      <provision-list class="integration-component"
+          *ngIf="this.provisionSearch.customerOrders && this.provisionSearch.customerOrders.length>0"
+          [affaireSearch]="provisionSearch" [isForTiersIntegration]="true" >
+        </provision-list>
     </mat-tab>
     <mat-tab label="Reclamation">
       <complaint-tiers [tiers]="tiers"></complaint-tiers>
