--- a/client/src/app/modules/monitoring/components/monitoring-details/monitoring-details.component.html
+++ b/client/src/app/modules/monitoring/components/monitoring-details/monitoring-details.component.html
@@ -70,6 +70,7 @@
           <span><strong>Indicateurs sur une semaine</strong></span><br>
           <span>Erreurs : {{batchStatistics.error}}</span><br>
           <span>Acquités : {{batchStatistics.acknowledge}}</span><br>
+          <span>Nouveau : {{batchStatistics.new }}</span><br>
           <span>En attente : {{batchStatistics.waiting }}</span><br>
           <span>En cours : {{batchStatistics.running }}</span><br>
           <span>Terminés avec succès : {{batchStatistics.success}}</span><br>
