add service feature

--- a/client/src/app/modules/administration/components/administration/administration.component.html
+++ b/client/src/app/modules/administration/components/administration/administration.component.html
@@ -287,6 +287,11 @@
           [saveEvent]="saveEvent.asObservable()" [addEvent]="addEvent.asObservable()"
           [cloneEvent]="cloneEvent.asObservable()">
         </referential-rff-frequency>
+        <referential-service *ngIf="selectedReferential==SERVICE_REFERENTIAL"
+          (selectedEntityChange)="changeSelectedEntity($event)" [(editMode)]="editMode"
+          [saveEvent]="saveEvent.asObservable()" [addEvent]="addEvent.asObservable()"
+          [cloneEvent]="cloneEvent.asObservable()">
+        </referential-service>
         <referential-complain-problem *ngIf="selectedReferential==COMPLAIN_PROBLEM_REFERENTIAL"
           (selectedEntityChange)="changeSelectedEntity($event)" [(editMode)]="editMode"
           [saveEvent]="saveEvent.asObservable()" [addEvent]="addEvent.asObservable()"
@@ -298,10 +303,10 @@
           [cloneEvent]="cloneEvent.asObservable()">
         </referential-complain-origin>
         <referential-complain-cause *ngIf="selectedReferential==COMPLAIN_CAUSE_REFERENTIAL"
-        (selectedEntityChange)="changeSelectedEntity($event)" [(editMode)]="editMode"
-        [saveEvent]="saveEvent.asObservable()" [addEvent]="addEvent.asObservable()"
-        [cloneEvent]="cloneEvent.asObservable()">
-      </referential-complain-cause>
+          (selectedEntityChange)="changeSelectedEntity($event)" [(editMode)]="editMode"
+          [saveEvent]="saveEvent.asObservable()" [addEvent]="addEvent.asObservable()"
+          [cloneEvent]="cloneEvent.asObservable()">
+        </referential-complain-cause>
         <button matTooltip="Sauvegarder" mat-fab color="warn" class="fab-button" *ngIf="editMode"
           (click)="saveEntity()">
           <mat-icon>save</mat-icon>
