--- a/client/src/app/modules/miscellaneous/components/forms/generic-textarea/generic-textarea.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-textarea/generic-textarea.component.html
@@ -11,4 +11,6 @@
     class="pointer ">
     adjust
   </mat-icon>
+  <mat-hint *ngIf="hint && hint.length>0">
+    {{hint}}</mat-hint>
 </mat-form-field>
