--- a/src/main/resources/mails/templates/billing-closure-receipt.html
+++ b/src/main/resources/mails/templates/billing-closure-receipt.html
@@ -74,7 +74,7 @@
             <tr>
                 <td style="text-align: center;" class="border-table">Date</td>
                 <td style="text-align: center;" class="border-table">Description</td>
-                <td class="border-table">Débit</td>
+                <td class="border-table" style="border-right: solid;border-color: rgb(0,83,159)">Débit</td>
                 <td class="border-table">Crédit</td>
             </tr>
         </thead>
@@ -93,10 +93,10 @@
                 <strong><span th:utext="${values.eventDescription}"></span></strong>
             </td>
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class" class="td-with-price  "
-                th:if="${values.debitAmount!=null}"><span
+                style="border-right: solid;border-color: rgb(0,83,159)" th:if="${values.debitAmount!=null}"><span
                     th:text="${#numbers.formatDecimal(values.debitAmount,1,2)}"></span> €</td>
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class" class="td-with-price  "
-                th:if="${values.debitAmount==null}"></td>
+                style="border-right: solid;border-color: rgb(0,83,159)" th:if="${values.debitAmount==null}"></td>
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class" class="td-with-price  "
                 th:if="${values.creditAmount!=null}"><span
                     th:text="${#numbers.formatDecimal(values.creditAmount,1,2)}"></span> €</td>
@@ -105,7 +105,8 @@
         </tr>
     </table>
     <p style="margin-top: 10px;">&#160;</p>
-    <table style="border : solid; border-color: rgb(0,83,159);width: 680px;margin-top: 20px;border-collapse: collapse;">
+    <table
+        style="border : solid; border-color: rgb(0,83,159);width: 680px;margin-top: 20px;border-collapse: collapse;break-inside: avoid;">
         <tr>
             <td class="td-date "></td>
             <td style="text-align: right;padding-right: 10px;">
@@ -126,7 +127,7 @@
                     th:text="${#numbers.formatDecimal(creditBalance,1,2)}"></span> €
             </td>
         </tr>
-        <tr>
+        <tr th:if="${balance>=0}">
             <td class="td-date "></td>
             <td style="text-align: right;;padding-right: 10px;">
                 Solde
@@ -135,6 +136,16 @@
             <td class="td-with-price" style="text-align: right;white-space: nowrap;" colspan="2"><span
                     th:text="${#numbers.formatDecimal(balance,1,2)}"></span> €
             </td>
+        </tr>
+        <tr th:if="${0>balance}">
+            <td class="td-date "></td>
+            <td style="text-align: right;;padding-right: 10px;">
+                Solde
+            </td>
+            <td class="td-with-price" style="text-align: right;white-space: nowrap;" colspan="2"><span
+                    th:text="${#numbers.formatDecimal(-balance,1,2)}"></span> €
+            </td>
+            <td class="td-with-price"></td>
         </tr>
     </table>
     <p style="font-size: 16px;">Vous pouvez effectuer les paiements par virement en utilisant les informations
