--- a/src/main/resources/mails/templates/invoice-reminder.html
+++ b/src/main/resources/mails/templates/invoice-reminder.html
@@ -195,7 +195,11 @@
                                                                 <p>Nous vous adressons une nouvelle fois la facture de
                                                                     votre commande n°<span
                                                                         th:text="${customerOrder.id}"></span> à
-                                                                    télécharger en PJ.</br>
+                                                                    télécharger en PJ. </br>
+                                                                <p th:if="${isLastReminder}"><span>Sans réglement de
+                                                                        votre part dans les 10 jours, nous nous verrons
+                                                                        contraints de vous mettre en demeure pour la
+                                                                        somme en question.</span></p>
                                                                 <p>Afin de régler cette facture d'un montant de <span
                                                                         th:text="${#numbers.formatDecimal(remainingToPay,1,2)}"></span>
                                                                     € dans les meilleurs délais, vous disposez de
